# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2001 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  28 Feb 2002; Martin Schlemmer <azarah@gentoo.org>: add /etc/conf.d/local.start
  and /etc/conf.d/local.stop for adding any misc programs to startup.  This
  should pretty much have /etc/init.d/ static, except for baselayout updates,
  etc.

  27 Feb 2002; Martin Schlemmer <azarah@gentoo.org>: in some wierd cases,
    a redundent /dev/.devfsd on a unmounted /dev can cause problems.  Fixed
    this in /sbin/rc.

    Added the patches from Grant Goodyear (aka g2boojum) to enable us to
    use a ramdisk to store the contents of ${svcdir}.  Updated /sbin/rc,
    /etc/init.d/functions.sh and /etc/init.d/checkroot for this.

  26 Feb 2002; Martin Schlemmer <azarah@gentoo.org>: fix my brain dead
    update of the 25th.  It really should keep "gentoo=nodevfs" in mind.
    Also added 'get_bootparam()' to help in retrieving kernel options.
    Updated /etc/init.d/functions.sh, /etc/init.d/checkroot and /sbin/rc
    for this.

    Updated /etc/init.d/consolefont to work without devfs as well.

    When rebooting or shutting down, a service should not fail to stop
    if a service it depends on, fails.  Updated /etc/init.d/runscript.sh
    for this.

  25 Feb 2002; Martin Schlemmer <azarah@gentoo.org>: added a check if
  /dev is mounted when creating entries for /etc/mtab.  This should solve a
  invalid entry or /dev being mounted even with 'gentoo=nodevfs' option.
  Updated /etc/init.d/checkroot for this.

  17 Feb 2002: Daniel Robbins <drobbins@gentoo.org>: Made "xfs" the default
  filesystem in /etc/fstab (from ReiserFS) and removed "notail" option (it's
  just in a comment now)

  17 Feb 2002: Martin Schlemmer (azarah@gentoo.org): more fixes to 'after' and
  'before', updated /etc/init.d/runscript.sh for this.  This should fix